deploy/gateway/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: pfcjeong/guam-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: "/actuator/health/readiness"
              port: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
