deploy/gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    cloud.google.com/backend-config: '{"default": "hc-config"}'
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
